--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 # Configuration for pytest
-testpaths = ctutor_backend/tests
+testpaths = computor_backend/tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
