--- a/computor-cli/pyproject.toml
+++ b/computor-cli/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.10"
 dependencies = [
     "computor-types>=0.1.0",
     "computor-client>=0.1.0",
+    "computor-utils>=0.1.0",
     "click>=8.0",
     "pydantic>=2.0",
     "httpx>=0.27.0",
