fix: startup minor fixes.

--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /home/uvicorn
 
 # Copy source code and installation files as root, then change ownership
 ADD computor-types /home/uvicorn/computor-types
+ADD computor-utils /home/uvicorn/computor-utils
 ADD computor-backend /home/uvicorn/computor-backend
 ADD migrations.sh /home/uvicorn/migrations.sh
 ADD docker/api/startup.bash startup.bash
@@ -20,8 +21,9 @@ USER uvicorn
 # Set PATH to include local pip install directory
 ENV PATH="/home/uvicorn/.local/bin:${PATH}"
 
-# Install computor-types first (local package)
+# Install local packages first (computor-types and computor-utils)
 RUN pip install --user -e computor-types
+RUN pip install --user -e computor-utils
 
 # Install dependencies
 RUN pip install --user -r computor-backend/src/requirements.txt
