refactor: temporal dockerfiles.

--- a/docker/temporal-worker-python/Dockerfile
+++ b/docker/temporal-worker-python/Dockerfile
@@ -5,9 +5,10 @@ RUN apt-get update && apt-get install -y postgresql-client git
 RUN useradd -ms /bin/bash worker
 WORKDIR /home/worker
 
-# Copy computor-types, computor-utils and computor-backend as root
+# Copy computor-types, computor-utils, computor-client and computor-backend as root
 ADD computor-types /home/worker/computor-types
 ADD computor-utils /home/worker/computor-utils
+ADD computor-client /home/worker/computor-client
 ADD computor-backend /home/worker/computor-backend
 
 # Copy the python-worker.py script
@@ -19,9 +20,10 @@ RUN chown -R worker:worker /home/worker
 # Switch to worker user
 USER worker
 
-# Install local packages first (computor-types and computor-utils)
+# Install local packages first (computor-types, computor-utils, and computor-client)
 RUN pip install --user -e computor-types
 RUN pip install --user -e computor-utils
+RUN pip install --user -e computor-client
 
 # Install dependencies
 RUN pip install --no-cache-dir --user --upgrade -r computor-backend/src/requirements.txt
