fix: error fixes regarding result PATCH, environment variables.

--- a/.env.dev
+++ b/.env.dev
@@ -46,6 +46,7 @@ EXECUTION_BACKEND_API_PASSWORD=admin
 
 # SECURITY
 TOKEN_SECRET="EZdgwBIak481WZB8ZkZmzKHTDkRQFzDjeTrhSlU_v2g="
+AUTH_SECRET="1UCB1NoYejWvNf0PnbM7y/SX1EYfla4SGjsNtfwmmAE="
 
 # FRONTEND
 REACT_APP_BACKEND_URL=http://localhost:8000
