--- a/docker/temporal-worker-dev/Dockerfile
+++ b/docker/temporal-worker-dev/Dockerfile
@@ -17,13 +17,13 @@ RUN chown -R worker:worker /home/worker
 # Switch to worker user
 USER worker
 
-# Install local packages first (computor-types, computor-utils, and computor-client)
+# Install local packages first (needed by computor-backend)
 RUN pip install --user -e computor-types
 RUN pip install --user -e computor-utils
 RUN pip install --user -e computor-client
 
-# Install dependencies
-RUN pip install --no-cache-dir --user --upgrade -r computor-backend/src/requirements.txt
+# Install computor-backend in editable mode with all dependencies
+RUN pip install --user -e computor-backend
 
 # The source code will be mounted as a volume for hot reload
 # We'll add the source to PYTHONPATH instead of using editable install
