--- a/computor-types/pyproject.toml
+++ b/computor-types/pyproject.toml
@@ -23,6 +23,10 @@ classifiers = [
 dependencies = [
     "pydantic>=2.0",
     "email-validator>=2.0",
+    "keycove>=0.1.0",
+    "text-unidecode>=1.3",
+    "pydantic-yaml>=1.0.0",
+    "pyyaml>=6.0",
 ]
 
 [project.optional-dependencies]
