feat: advanced exception handling.

--- a/.env.dev
+++ b/.env.dev
@@ -25,6 +25,12 @@ REDIS_PASSWORD=redis_password
 # DEBUG
 DEBUG_MODE=development
 
+# SECURITY: Disable debug info in API responses (even in development mode)
+# When true: API returns only {"error_code": "...", "message": "..."}
+# When false: API includes debug info with file paths, function names, line numbers
+# IMPORTANT: ALWAYS set to true in production and shared environments for security
+DISABLE_API_DEBUG_INFO=true
+
 # WORKER CONFIGURATION
 TEMPORAL_WORKER_REPLICAS=1
 
@@ -50,6 +56,7 @@ AUTH_SECRET="1UCB1NoYejWvNf0PnbM7y/SX1EYfla4SGjsNtfwmmAE="
 
 # FRONTEND
 REACT_APP_BACKEND_URL=http://localhost:8000
+NEXT_PUBLIC_FASTAPI_URL=http://localhost:8000
 
 # VSC VSIX DOWNLOAD INFO
 VSC_GITLAB_PROJECT_ID=0
