--- a/.env.prod
+++ b/.env.prod
@@ -24,6 +24,10 @@ REDIS_PASSWORD=redis_password
 # DEBUG
 DEBUG_MODE=production
 
+# SECURITY: Disable debug info in API responses
+# CRITICAL: MUST be set to true in production for security
+DISABLE_API_DEBUG_INFO=true
+
 # WORKER CONFIGURATION
 TEMPORAL_WORKER_REPLICAS=2
 
@@ -49,6 +53,7 @@ AUTH_SECRET="1UCB1NoYejWvNf0PnbM7y/SX1EYfla4SGjsNtfwmmAE="
 
 # FRONTEND
 REACT_APP_BACKEND_URL=http://localhost:8000
+NEXT_PUBLIC_FASTAPI_URL=http://uvicorn:8000
 
 # VSC VSIX DOWNLOAD INFO
 VSC_GITLAB_PROJECT_ID=0
