--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -25,6 +25,7 @@ services:
     volumes:
       - ${SYSTEM_DEPLOYMENT_PATH}/postgres:/var/lib/postgresql/data
     environment:
+      - TZ=UTC
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_DB=${POSTGRES_DB}
@@ -40,6 +41,7 @@ services:
     volumes:
       - ${SYSTEM_DEPLOYMENT_PATH}/temporal-postgres:/var/lib/postgresql/data
     environment:
+      TZ: UTC
       POSTGRES_USER: temporal
       POSTGRES_PASSWORD: temporal
       POSTGRES_DB: temporal
@@ -172,6 +174,7 @@ services:
     deploy:
       replicas: ${TEMPORAL_WORKER_REPLICAS:-1}
     environment:
+      - TZ=UTC
       - RUNNING_IN_DOCKER=true
       - TEMPORAL_HOST=temporal
       - TEMPORAL_PORT=7233
@@ -211,6 +214,7 @@ services:
     deploy:
       replicas: ${PYTHON_TESTING_WORKER_REPLICAS:-1}
     environment:
+      - TZ=UTC
       - RUNNING_IN_DOCKER=true
       - TEMPORAL_HOST=temporal
       - TEMPORAL_PORT=7233
@@ -247,6 +251,7 @@ services:
     deploy:
       replicas: ${MATLAB_TESTING_WORKER_REPLICAS:-1}
     environment:
+      - TZ=UTC
       - RUNNING_IN_DOCKER=true
       - TEMPORAL_HOST=temporal
       - TEMPORAL_PORT=7233
