--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -30,6 +30,7 @@ services:
     volumes:
       - ${SYSTEM_DEPLOYMENT_PATH}/postgres:/var/lib/postgresql/data
     environment:
+      - TZ=UTC
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_DB=${POSTGRES_DB}
@@ -45,6 +46,7 @@ services:
     volumes:
       - ${SYSTEM_DEPLOYMENT_PATH}/temporal-postgres:/var/lib/postgresql/data
     environment:
+      TZ: UTC
       POSTGRES_USER: temporal
       POSTGRES_PASSWORD: temporal
       POSTGRES_DB: temporal
@@ -104,6 +106,7 @@ services:
     ports:
       - 8000:8000
     environment:
+      TZ: UTC
       RUNNING_IN_DOCKER: true
       EXECUTION_BACKEND_API_USER: ${EXECUTION_BACKEND_API_USER}
       EXECUTION_BACKEND_API_PASSWORD: ${EXECUTION_BACKEND_API_PASSWORD}
@@ -183,6 +186,7 @@ services:
     deploy:
       replicas: ${TEMPORAL_WORKER_REPLICAS:-1}
     environment:
+      - TZ=UTC
       - RUNNING_IN_DOCKER=true
       - TEMPORAL_HOST=temporal
       - TEMPORAL_PORT=7233
@@ -222,6 +226,7 @@ services:
     deploy:
       replicas: ${PYTHON_TESTING_WORKER_REPLICAS:-2}
     environment:
+      - TZ=UTC
       - RUNNING_IN_DOCKER=true
       - TEMPORAL_HOST=temporal
       - TEMPORAL_PORT=7233
@@ -256,6 +261,7 @@ services:
     deploy:
       replicas: ${MATLAB_TESTING_WORKER_REPLICAS:-1}
     environment:
+      - TZ=UTC
       - RUNNING_IN_DOCKER=true
       - TEMPORAL_HOST=temporal
       - TEMPORAL_PORT=7233
