refactor: environment variables

--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,7 @@
 # Production-specific environment variables
 
 # SYSTEM ENV
-SYSTEM_DEPLOYMENT_PATH=/tmp/codeability
+SYSTEM_DEPLOYMENT_PATH=/tmp/computor
 EXECUTION_BACKEND_API_URL=http://uvicorn:8000
 API_ROOT_PATH=/tmp/execution-backend
 API_LOCAL_STORAGE_DIR=${API_ROOT_PATH}/shared
@@ -14,7 +14,7 @@ POSTGRES_PORT=5437
 POSTGRES_URL=${POSTGRES_HOST}:${POSTGRES_PORT}
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres_secret
-POSTGRES_DB=codeability
+POSTGRES_DB=computor
 
 # REDIS
 REDIS_HOST=redis
@@ -54,12 +54,6 @@ AUTH_SECRET="1UCB1NoYejWvNf0PnbM7y/SX1EYfla4SGjsNtfwmmAE="
 # FRONTEND
 REACT_APP_BACKEND_URL=http://localhost:8000
 NEXT_PUBLIC_FASTAPI_URL=http://uvicorn:8000
-
-# VSC VSIX DOWNLOAD INFO
-VSC_GITLAB_PROJECT_ID=0
-VSC_GITLAB_URL="https://gitlab.com"
-VSC_FILE_PATH="computor-extension.vsix"
-VSC_VSIX_DOWNLOAD_LINK=
 
 # MinIO Configuration
 MINIO_ROOT_USER=minioadmin
