--- a/computor-types/pyproject.toml
+++ b/computor-types/pyproject.toml
@@ -23,10 +23,11 @@ classifiers = [
 dependencies = [
     "pydantic>=2.0",
     "email-validator>=2.0",
-    "keycove>=0.1.0",
+    "keycove>=0.1.0",  # TODO: Remove after migration complete
     "text-unidecode>=1.3",
     "pydantic-yaml>=1.0.0",
     "pyyaml>=6.0",
+    "argon2-cffi>=23.1.0",  # Secure password hashing
 ]
 
 [project.optional-dependencies]
