refactor: docker compose and environment

--- a/.env.dev
+++ b/.env.dev
@@ -80,3 +80,6 @@ KEYCLOAK_CLIENT_SECRET=computor-backend-secret
 TEST_GITLAB_URL=http://localhost:8084
 TEST_GITLAB_TOKEN=
 TEST_GITLAB_GROUP_ID=
+
+# FRONTEND
+COMPUTOR_WEB_IMAGE=computor-web:latest
