--- a/.env.prod
+++ b/.env.prod
@@ -52,8 +52,7 @@ TOKEN_SECRET="EZdgwBIak481WZB8ZkZmzKHTDkRQFzDjeTrhSlU_v2g="
 AUTH_SECRET="1UCB1NoYejWvNf0PnbM7y/SX1EYfla4SGjsNtfwmmAE="
 
 # FRONTEND
-REACT_APP_BACKEND_URL=http://localhost:8000
-NEXT_PUBLIC_FASTAPI_URL=http://uvicorn:8000
+COMPUTOR_WEB_IMAGE=computor-web:latest
 
 # MinIO Configuration
 MINIO_ROOT_USER=minioadmin
