--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -192,9 +192,9 @@ services:
       - SYSTEM_GIT_EMAIL=${SYSTEM_GIT_EMAIL:-worker@computor.local}
       - SYSTEM_GIT_NAME=${SYSTEM_GIT_NAME:-Computor Worker}
       - PYTHONPATH=/home/worker/src
-      - EXECUTION_BACKEND_API_URL=${EXECUTION_BACKEND_API_URL}
-      - EXECUTION_BACKEND_API_USER=${EXECUTION_BACKEND_API_USER}
-      - EXECUTION_BACKEND_API_PASSWORD=${EXECUTION_BACKEND_API_PASSWORD}
+      - API_URL=${API_URL}
+      - API_ADMIN_USER=${API_ADMIN_USER}
+      - API_ADMIN_PASSWORD=${API_ADMIN_PASSWORD}
     volumes:
       - ${SYSTEM_DEPLOYMENT_PATH}/execution-backend:${API_ROOT_PATH}
     depends_on:
@@ -219,9 +219,8 @@ services:
       - TEMPORAL_HOST=temporal
       - TEMPORAL_PORT=7233
       - TEMPORAL_NAMESPACE=default
-      - EXECUTION_BACKEND_API_URL=${EXECUTION_BACKEND_API_URL}
-      - EXECUTION_BACKEND_API_USER=${EXECUTION_BACKEND_API_USER}
-      - EXECUTION_BACKEND_API_PASSWORD=${EXECUTION_BACKEND_API_PASSWORD}
+      - API_URL=${API_URL}
+      - API_TOKEN=${PYTHON_WORKER_TOKEN}
       - TESTING_EXECUTABLE=/tmp/engine/catester/testing.py run
       - RUNTIME_ENVIRONMENT=/tmp/engine/venv/bin/python
       - PYTHON_TEST_ENGINE_URL=${PYTHON_TEST_ENGINE_URL}
@@ -254,9 +253,8 @@ services:
       - TEMPORAL_PORT=7233
       - TEMPORAL_NAMESPACE=default
       - PYTHONPATH=/home/matlab/src
-      - EXECUTION_BACKEND_API_URL=${EXECUTION_BACKEND_API_URL}
-      - EXECUTION_BACKEND_API_USER=${EXECUTION_BACKEND_API_USER}
-      - EXECUTION_BACKEND_API_PASSWORD=${EXECUTION_BACKEND_API_PASSWORD}
+      - API_URL=${API_URL}
+      - API_TOKEN=${MATLAB_WORKER_TOKEN}
       - MATLAB_TEST_ENGINE_URL=${MATLAB_TEST_ENGINE_URL}
       - MATLAB_TEST_ENGINE_TOKEN=${MATLAB_TEST_ENGINE_TOKEN}
       - MATLAB_TEST_ENGINE_VERSION=${MATLAB_TEST_ENGINE_VERSION}
