--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -108,8 +108,8 @@ services:
     environment:
       TZ: UTC
       RUNNING_IN_DOCKER: true
-      EXECUTION_BACKEND_API_USER: ${EXECUTION_BACKEND_API_USER}
-      EXECUTION_BACKEND_API_PASSWORD: ${EXECUTION_BACKEND_API_PASSWORD}
+      API_ADMIN_USER: ${API_ADMIN_USER}
+      API_ADMIN_PASSWORD: ${API_ADMIN_PASSWORD}
       API_LOCAL_STORAGE_DIR: ${API_LOCAL_STORAGE_DIR}
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: ${POSTGRES_PORT}
@@ -203,9 +203,9 @@ services:
       - SYSTEM_GIT_EMAIL=${SYSTEM_GIT_EMAIL:-worker@computor.local}
       - SYSTEM_GIT_NAME=${SYSTEM_GIT_NAME:-Computor Worker}
       - PYTHONPATH=/home/worker/src
-      - EXECUTION_BACKEND_API_URL=${EXECUTION_BACKEND_API_URL}
-      - EXECUTION_BACKEND_API_USER=${EXECUTION_BACKEND_API_USER}
-      - EXECUTION_BACKEND_API_PASSWORD=${EXECUTION_BACKEND_API_PASSWORD}
+      - API_URL=${API_URL}
+      - API_ADMIN_USER=${API_ADMIN_USER}
+      - API_ADMIN_PASSWORD=${API_ADMIN_PASSWORD}
       - MINIO_ENDPOINT=minio:9000
       - MINIO_ACCESS_KEY=${MINIO_ROOT_USER:-minioadmin}
       - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD:-minioadmin}
@@ -235,9 +235,8 @@ services:
       - TEMPORAL_HOST=temporal
       - TEMPORAL_PORT=7233
       - TEMPORAL_NAMESPACE=default
-      - EXECUTION_BACKEND_API_URL=${EXECUTION_BACKEND_API_URL}
-      - EXECUTION_BACKEND_API_USER=${EXECUTION_BACKEND_API_USER}
-      - EXECUTION_BACKEND_API_PASSWORD=${EXECUTION_BACKEND_API_PASSWORD}
+      - API_URL=${API_URL}
+      - API_TOKEN=${PYTHON_WORKER_TOKEN}
       - TESTING_EXECUTABLE=/tmp/engine/catester/testing.py run
       - RUNTIME_ENVIRONMENT=/tmp/engine/venv/bin/python
       - PYTHON_TEST_ENGINE_URL=${PYTHON_TEST_ENGINE_URL}
@@ -269,9 +268,8 @@ services:
       - TEMPORAL_PORT=7233
       - TEMPORAL_NAMESPACE=default
       - PYTHONPATH=/home/matlab/computor-backend/src
-      - EXECUTION_BACKEND_API_URL=${EXECUTION_BACKEND_API_URL}
-      - EXECUTION_BACKEND_API_USER=${EXECUTION_BACKEND_API_USER}
-      - EXECUTION_BACKEND_API_PASSWORD=${EXECUTION_BACKEND_API_PASSWORD}
+      - API_URL=${API_URL}
+      - API_TOKEN=${MATLAB_WORKER_TOKEN}
       - MATLAB_TEST_ENGINE_URL=${MATLAB_TEST_ENGINE_URL}
       - MATLAB_TEST_ENGINE_TOKEN=${MATLAB_TEST_ENGINE_TOKEN}
       - MATLAB_TEST_ENGINE_VERSION=${MATLAB_TEST_ENGINE_VERSION}
