--- a/.env.prod
+++ b/.env.prod
@@ -2,7 +2,7 @@
 
 # SYSTEM ENV
 SYSTEM_DEPLOYMENT_PATH=/tmp/computor
-EXECUTION_BACKEND_API_URL=http://uvicorn:8000
+API_URL=http://uvicorn:8000
 API_ROOT_PATH=/tmp/execution-backend
 API_LOCAL_STORAGE_DIR=${API_ROOT_PATH}/shared
 SYSTEM_GIT_NAME="Computor API"
@@ -44,8 +44,8 @@ TEMPORAL_NAMESPACE=default
 DOCKER_SOCKET_PATH=/var/run/docker.sock
 
 # API CREDENTIALS
-EXECUTION_BACKEND_API_USER=admin
-EXECUTION_BACKEND_API_PASSWORD=admin
+API_ADMIN_USER=admin
+API_ADMIN_PASSWORD=admin
 
 # SECURITY
 TOKEN_SECRET="EZdgwBIak481WZB8ZkZmzKHTDkRQFzDjeTrhSlU_v2g="
