--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -129,6 +129,7 @@ services:
       MINIO_ACCESS_KEY: ${MINIO_ROOT_USER:-minioadmin}
       MINIO_SECRET_KEY: ${MINIO_ROOT_PASSWORD:-minioadmin}
       MINIO_SECURE: false
+      MINIO_MAX_UPLOAD_SIZE: ${MINIO_MAX_UPLOAD_SIZE:-10485760}
     # depends_on:
     #   postgres:
     #     condition: service_healthy
